Fix iframe from cutting off words

--- a/QnABot.css
+++ b/QnABot.css
@@ -37,6 +37,11 @@ body {
 
 #iframe1 {
   border-radius: 20px;
+  position absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 /* Add some hover effects to buttons */
